--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
         <h3> Example healine</h3>
         <p> Some reprensenttative placeholder content for the first slide of the carousel</p>
         <p><a class="btn btn-lg btn-info" href="#"> Sign up today</a></p></div>
-        <img src="img/totoro.webp" alt="Ảnh 1" style="width:100%;">
+        <img src="totoro.webp" alt="Ảnh 1" style="width:100%;">
       </div>
       <div class="item">
         <div class="carousel-caption"> 
           <h3> Example healine</h3>
           <p> Some reprensenttative placeholder content for the second slide of the carousel</p>
           <p><a class="btn btn-lg btn-info" href="#"> Sign up today</a></p></div>
-        <img src="img/326212851_583857556494403_5519359707770880434_n.jpg" alt="Ảnh 2" style="width:100%;">
+        <img src="326212851_583857556494403_5519359707770880434_n.jpg" alt="Ảnh 2" style="width:100%;">
       </div>
       <div class="item">
         <div class="carousel-caption"> 
           <h3> One more for good measnure</h3>
     <p>Some reprensenttative placeholder content for the thrid slide of the carousel</p>
      <p><a class="btn btn-lg btn-info" href="#">Browse gallery</a></p></div>
-        <img src="img/z6213377168342_71b6aee1917f82197975e48446ff85fc.jpg" alt="Ảnh 3" style="width:100%;">
+        <img src="z6213377168342_71b6aee1917f82197975e48446ff85fc.jpg" alt="Ảnh 3" style="width:100%;">
       </div>
     </div>
 
